--- a/admin/.env.production
+++ b/admin/.env.production
@@ -2,6 +2,6 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = 'https://mlog.club'
-VUE_APP_BASE_URL = 'https://mlog.club'
+VUE_APP_BASE_API = 'http://localhost:8082'
+VUE_APP_BASE_URL = 'http://localhost:3000'
 
